// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ExamResultView /> should render component when correct all 1`] = `
<div
  className="sc-VigVT jrXkrb"
>
  <div
    className="sc-bdVaJa jXieMO"
    style={
      Object {
        "marginBottom": "16px",
      }
    }
  >
    <div
      className="sc-bwzfXH ijMQBI"
    >
      正解数
    </div>
    <div
      className="sc-htpNat hHyKqi"
    >
      3 / 3
    </div>
  </div>
  <div
    className="sc-bdVaJa jXieMO"
    style={
      Object {
        "marginBottom": "32px",
      }
    }
  >
    <div
      className="sc-bwzfXH ijMQBI"
    >
      平均回答時間
    </div>
    <div
      className="sc-htpNat hHyKqi"
    >
      3.5秒
    </div>
  </div>
  <div
    className="sc-jTzLTM cpVoso"
  >
    <a
      className="twitter-share-button"
      data-show-count="false"
      data-size="large"
      data-text="百人一首で 3問中 3問 正解しました！"
      data-url="https://hyakuninanki.net"
      href="https://twitter.com/share"
    >
      Tweet
    </a>
  </div>
  <div
    className="sc-bxivhb jtTCMI"
    style={
      Object {
        "marginBottom": "16px",
      }
    }
  >
    <div
      className="sc-ifAKCX dIsoRQ"
      data-test="question-1"
      onClick={[Function]}
    >
      <span
        className="sc-EHOje jUGYtC"
      >
        一番
      </span>
      <span
        className="sc-bZQynM gjRLta"
      >
        <div
          className=" gatsby-image-wrapper"
          style={
            Object {
              "overflow": "hidden",
              "position": "relative",
              "width": "80%",
            }
          }
        >
          <div
            style={
              Object {
                "paddingBottom": "100%",
                "width": "100%",
              }
            }
          />
          <picture>
            <source
              sizes="100 200 300"
              srcSet="asdfasdf"
            />
            <img
              alt=""
              onLoad={[Function]}
              src="correct-base64-encoded-image"
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "top": 0,
                  "transition": "opacity 0.5s",
                  "width": "100%",
                }
              }
            />
          </picture>
          <noscript
            dangerouslySetInnerHTML={
              Object {
                "__html": "<picture><source srcSet=\\"asdfasdf\\" sizes=\\"100 200 300\\" /><img src=\\"correct-base64-encoded-image\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
              }
            }
          />
        </div>
      </span>
    </div>
    <div
      className="sc-ifAKCX dIsoRQ"
      data-test="question-2"
      onClick={[Function]}
    >
      <span
        className="sc-EHOje jUGYtC"
      >
        一番
      </span>
      <span
        className="sc-bZQynM gjRLta"
      >
        <div
          className=" gatsby-image-wrapper"
          style={
            Object {
              "overflow": "hidden",
              "position": "relative",
              "width": "80%",
            }
          }
        >
          <div
            style={
              Object {
                "paddingBottom": "100%",
                "width": "100%",
              }
            }
          />
          <picture>
            <source
              sizes="100 200 300"
              srcSet="asdfasdf"
            />
            <img
              alt=""
              onLoad={[Function]}
              src="correct-base64-encoded-image"
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "top": 0,
                  "transition": "opacity 0.5s",
                  "width": "100%",
                }
              }
            />
          </picture>
          <noscript
            dangerouslySetInnerHTML={
              Object {
                "__html": "<picture><source srcSet=\\"asdfasdf\\" sizes=\\"100 200 300\\" /><img src=\\"correct-base64-encoded-image\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
              }
            }
          />
        </div>
      </span>
    </div>
    <div
      className="sc-ifAKCX dIsoRQ"
      data-test="question-3"
      onClick={[Function]}
    >
      <span
        className="sc-EHOje jUGYtC"
      >
        一番
      </span>
      <span
        className="sc-bZQynM gjRLta"
      >
        <div
          className=" gatsby-image-wrapper"
          style={
            Object {
              "overflow": "hidden",
              "position": "relative",
              "width": "80%",
            }
          }
        >
          <div
            style={
              Object {
                "paddingBottom": "100%",
                "width": "100%",
              }
            }
          />
          <picture>
            <source
              sizes="100 200 300"
              srcSet="asdfasdf"
            />
            <img
              alt=""
              onLoad={[Function]}
              src="correct-base64-encoded-image"
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "top": 0,
                  "transition": "opacity 0.5s",
                  "width": "100%",
                }
              }
            />
          </picture>
          <noscript
            dangerouslySetInnerHTML={
              Object {
                "__html": "<picture><source srcSet=\\"asdfasdf\\" sizes=\\"100 200 300\\" /><img src=\\"correct-base64-encoded-image\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
              }
            }
          />
        </div>
      </span>
    </div>
  </div>
  <button
    className="MuiButtonBase-root-32 MuiButton-root-6 MuiButton-outlined-14 Component-button-1 Component-normalButton-2"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-7"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-35 MuiIcon-fontSizeSmall-42 Component-normalIcon-4"
      >
        arrow_back
      </span>
      メニューに戻る
    </span>
    <span
      className="MuiTouchRipple-root-60"
    />
  </button>
</div>
`;

exports[`<ExamResultView /> should render component when wrong 1`] = `
<div
  className="sc-VigVT jrXkrb"
>
  <div
    className="sc-bdVaJa jXieMO"
    style={
      Object {
        "marginBottom": "16px",
      }
    }
  >
    <div
      className="sc-bwzfXH ijMQBI"
    >
      正解数
    </div>
    <div
      className="sc-htpNat hHyKqi"
    >
      2 / 3
    </div>
  </div>
  <div
    className="sc-bdVaJa jXieMO"
    style={
      Object {
        "marginBottom": "32px",
      }
    }
  >
    <div
      className="sc-bwzfXH ijMQBI"
    >
      平均回答時間
    </div>
    <div
      className="sc-htpNat hHyKqi"
    >
      3.5秒
    </div>
  </div>
  <div
    className="sc-jTzLTM cpVoso"
  >
    <a
      className="twitter-share-button"
      data-show-count="false"
      data-size="large"
      data-text="百人一首で 3問中 2問 正解しました！"
      data-url="https://hyakuninanki.net"
      href="https://twitter.com/share"
    >
      Tweet
    </a>
  </div>
  <div
    className="sc-bxivhb jtTCMI"
    style={
      Object {
        "marginBottom": "16px",
      }
    }
  >
    <div
      className="sc-ifAKCX dIsoRQ"
      data-test="question-1"
      onClick={[Function]}
    >
      <span
        className="sc-EHOje jUGYtC"
      >
        一番
      </span>
      <span
        className="sc-bZQynM gjRLta"
      >
        <div
          className=" gatsby-image-wrapper"
          style={
            Object {
              "overflow": "hidden",
              "position": "relative",
              "width": "80%",
            }
          }
        >
          <div
            style={
              Object {
                "paddingBottom": "100%",
                "width": "100%",
              }
            }
          />
          <picture>
            <source
              sizes="100 200 300"
              srcSet="asdfasdf"
            />
            <img
              alt=""
              onLoad={[Function]}
              src="correct-base64-encoded-image"
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "top": 0,
                  "transition": "opacity 0.5s",
                  "width": "100%",
                }
              }
            />
          </picture>
          <noscript
            dangerouslySetInnerHTML={
              Object {
                "__html": "<picture><source srcSet=\\"asdfasdf\\" sizes=\\"100 200 300\\" /><img src=\\"correct-base64-encoded-image\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
              }
            }
          />
        </div>
      </span>
    </div>
    <div
      className="sc-ifAKCX dIsoRQ"
      data-test="question-2"
      onClick={[Function]}
    >
      <span
        className="sc-EHOje jUGYtC"
      >
        一番
      </span>
      <span
        className="sc-bZQynM gjRLta"
      >
        <div
          className=" gatsby-image-wrapper"
          style={
            Object {
              "overflow": "hidden",
              "position": "relative",
              "width": "80%",
            }
          }
        >
          <div
            style={
              Object {
                "paddingBottom": "100%",
                "width": "100%",
              }
            }
          />
          <picture>
            <source
              sizes="100 200 300"
              srcSet="asdfasdf"
            />
            <img
              alt=""
              onLoad={[Function]}
              src="correct-base64-encoded-image"
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "top": 0,
                  "transition": "opacity 0.5s",
                  "width": "100%",
                }
              }
            />
          </picture>
          <noscript
            dangerouslySetInnerHTML={
              Object {
                "__html": "<picture><source srcSet=\\"asdfasdf\\" sizes=\\"100 200 300\\" /><img src=\\"correct-base64-encoded-image\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
              }
            }
          />
        </div>
      </span>
    </div>
    <div
      className="sc-ifAKCX dIsoRQ"
      data-test="question-3"
      onClick={[Function]}
    >
      <span
        className="sc-EHOje jUGYtC"
      >
        一番
      </span>
      <span
        className="sc-bZQynM gjRLta"
      >
        <div
          className=" gatsby-image-wrapper"
          style={
            Object {
              "overflow": "hidden",
              "position": "relative",
              "width": "80%",
            }
          }
        >
          <div
            style={
              Object {
                "paddingBottom": "100%",
                "width": "100%",
              }
            }
          />
          <picture>
            <source
              sizes="100 200 300"
              srcSet="asdfasdf"
            />
            <img
              alt=""
              onLoad={[Function]}
              src="correct-base64-encoded-image"
              style={
                Object {
                  "height": "100%",
                  "left": 0,
                  "objectFit": "cover",
                  "objectPosition": "center",
                  "opacity": 0,
                  "position": "absolute",
                  "top": 0,
                  "transition": "opacity 0.5s",
                  "width": "100%",
                }
              }
            />
          </picture>
          <noscript
            dangerouslySetInnerHTML={
              Object {
                "__html": "<picture><source srcSet=\\"asdfasdf\\" sizes=\\"100 200 300\\" /><img src=\\"correct-base64-encoded-image\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;transition:opacity 0.5s;transition-delay:0.5s;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
              }
            }
          />
        </div>
      </span>
    </div>
  </div>
  <button
    className="MuiButtonBase-root-32 MuiButton-root-6 MuiButton-outlined-14 Component-button-1 Component-normalButton-2"
    disabled={false}
    onBlur={[Function]}
    onClick={[MockFunction]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    style={
      Object {
        "margin": "16px",
      }
    }
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-7"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-35 MuiIcon-fontSizeSmall-42 Component-normalIcon-4"
      >
        refresh
      </span>
      間違えた歌の練習をする
    </span>
    <span
      className="MuiTouchRipple-root-60"
    />
  </button>
  <button
    className="MuiButtonBase-root-32 MuiButton-root-6 MuiButton-outlined-14 Component-button-1 Component-normalButton-2"
    disabled={false}
    onBlur={[Function]}
    onClick={[Function]}
    onContextMenu={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    tabIndex="0"
    type="button"
  >
    <span
      className="MuiButton-label-7"
    >
      <span
        aria-hidden="true"
        className="material-icons MuiIcon-root-35 MuiIcon-fontSizeSmall-42 Component-normalIcon-4"
      >
        arrow_back
      </span>
      メニューに戻る
    </span>
    <span
      className="MuiTouchRipple-root-60"
    />
  </button>
</div>
`;
